tests/ui/unexpected_comma.stderr
error: no rules expected the token `,`
 --> $DIR/unexpected_comma.rs:5:17
  |
5 |     json!({ "a" , "b": true });
  |                 ^

