tests/ui/unexpected_comma.rs
#[macro_use]
extern crate serde_json;

fn main() {
    json!({ "a" , "b": true });
}
